After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 795463 - jpegenc: Outputs caps with sof-marker=4 when input is in RGB but this is not valid according to its pad templates
jpegenc: Outputs caps with sof-marker=4 when input is in RGB but this is not ...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
unspecified
Other All
: Normal normal
: 1.14.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks: 795420
 
 
Reported: 2018-04-22 13:46 UTC by Thibault Saunier
Modified: 2018-05-15 18:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
jpegenc: Accept sof-marker=4 (847 bytes, patch)
2018-04-22 13:46 UTC, Thibault Saunier
committed Details | Review

Description Thibault Saunier 2018-04-22 13:46:44 UTC
Title should be self explanatory. Attaching a patch to advertise that but I have not found where this list of sof-marker came from (didn't search much I must admit :-)).
Comment 1 Thibault Saunier 2018-04-22 13:46:50 UTC
Created attachment 371230 [details] [review]
jpegenc: Accept sof-marker=4

sof-marker is 4 when input is n the RGB colorspace.
Comment 2 Thibault Saunier 2018-04-23 10:57:01 UTC
Attachment 371230 [details] pushed as 1914b9d - jpegenc: Accept sof-marker=4